change PIXEL values to REM values

--- a/css/custom.css
+++ b/css/custom.css
@@ -2,8 +2,8 @@
     letter-spacing: 0.25px;
     font-weight: 700;
     font-family: 'Playfair Display', serif !important;
-    font-size: calc(22px + 1vw);
-    line-height: calc(28px + 1vw);
+    font-size: calc(1.375rem + 1vw);
+    line-height: calc(1.5rem + 1vw);
 }
 
 .lato {
@@ -123,8 +123,8 @@
 .masthead-sub h1 {
     font-family: 'Playfair Display', serif !important;
     font-weight: 700;
-    font-size: calc(20px + 3vw);
-    line-height: calc(25px + 3vw);
+    font-size: calc(1.25rem + 3vw);
+    line-height: calc(1.5rem + 3vw);
     letter-spacing: 0.25px;
     background: #141610;
     -webkit-text-fill-color: transparent;
@@ -133,7 +133,7 @@
 }
 
 .caseStudyTD h1 {
-    line-height: calc(37px + 3vw);
+    line-height: calc(2.25rem + 3vw);
 }
 
 .masthead-sub h2 {
@@ -449,7 +449,7 @@ a[data-fancybox] img {
 }
 
 .picturesTrad img {
-    max-height: calc(100px + 8vw);
+    max-height: calc(6.25rem + 8vw);
     object-fit: cover;
 }
 
@@ -554,8 +554,8 @@ a[data-fancybox] img {
     font-family: 'IBM Plex Serif', sans-serif !important;
     font-style: normal !important;
     font-weight: 700 !important;
-    font-size: calc(20px + 2vw) !important;
-    line-height: calc(22px + 2vw);
+    font-size: calc(1.25rem + 2vw) !important;
+    line-height: calc(1.35rem + 2vw);
     letter-spacing: 0.25px;
     margin: 0;
 }
@@ -569,16 +569,16 @@ a[data-fancybox] img {
 .aboutMeIntro h1 {
     font-family: 'IBM Plex Serif', sans-serif !important;
     font-weight: 300;
-    font-size: calc(25px + 4vw);
-    line-height: calc(20px + 4.5vw);
+    font-size: calc(1.6rem + 4vw);
+    line-height: calc(1.25rem + 4.5vw);
     letter-spacing: -1px;
     text-align: right;
     margin: 0;
 }
 
 .aboutMeIntro h5 {
-    font-size: calc(14px + 0.3vw) !important;
-    line-height: calc(22px + 0.3vw);
+    font-size: calc(0.9rem + 0.3vw) !important;
+    line-height: calc(1.375rem + 0.3vw);
 }
 
 .aboutMeTag {
