--- a/css/custom.css
+++ b/css/custom.css
@@ -657,8 +657,11 @@ iframe {
     background-position: 50% 50%;
     background-size: cover;
     background-attachment: fixed;
-    background-image: url("../assets/img/bg_main.png");
     object-fit: cover;
+}
+
+#page-top .hero-section {
+    background-image: url("../assets/img/bg_main.png");
 }
   
 .caseStudyVTP .hero-section {
@@ -671,6 +674,10 @@ iframe {
 
 .caseStudyAFA .hero-section {
     background-image: url("../assets/img/UX_AFA/UX_AFA_main.png");
+}
+
+.aboutMe .hero-section {
+    background-image: url("../assets/img/Illustrations/Others/201802_MBTA.png");
 }
 
 /* Accordions */
@@ -702,48 +709,6 @@ iframe {
 
 #AFA_Final .accordion-collapse {
     background-color: #E7F1F8;
-}
-
-.hero-section {
-    padding: 200px;
-    text-align: left;
-    position: static;
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: flex;
-    overflow: hidden;
-    height: 90vh;
-    margin: auto;
-    float: none;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -webkit-flex-direction: column;
-    -ms-flex-direction: column;
-    flex-direction: column;
-    -webkit-box-pack: center;
-    -webkit-justify-content: center;
-    -ms-flex-pack: center;
-    justify-content: center;
-    -webkit-flex-wrap: nowrap;
-    -ms-flex-wrap: nowrap;
-    flex-wrap: nowrap;
-    -webkit-box-align: start;
-    -webkit-align-items: flex-start;
-    -ms-flex-align: start;
-    align-items: flex-start;
-    background-position: 50% 50%;
-    background-size: cover;
-    background-attachment: fixed;
-    background-image: url("../assets/img/bg_main.png");
-}
-  
-.caseStudyVTP .hero-section {
-    background-image: url("../assets/img/UX_VTP/UX_VTP_main.png");
-}
-
-.aboutMe .hero-section {
-    background-image: url("../assets/img/Illustrations/Others/201802_MBTA.png");
 }
 
 /* Screen size MAX-WIDTH 1200 */
@@ -954,23 +919,18 @@ iframe {
   
     .hero-section {
         display: block;
-        height: 90vh;
         margin: 32px auto 0px auto;
         padding: 200px 0px 140px 10px;
-        overflow: auto;
         -webkit-box-orient: vertical;
         -webkit-box-direction: normal;
         -webkit-flex-direction: column;
         -ms-flex-direction: column;
         flex-direction: column;
         -webkit-box-pack: center;
-        -webkit-justify-content: center;
         -ms-flex-pack: center;
-        justify-content: center;
         background-image: url('../assets/img/bg_main.png'), -webkit-gradient(linear, left top, left bottom, from(#e8cf7d), to(#e8cf7d));
         background-image: url('../assets/img/bg_main.png'), linear-gradient(180deg, #e8cf7d, #e8cf7d);
         background-position: 69% 50%;
-        background-size: cover, auto;
         background-repeat: no-repeat, repeat;
         background-attachment: fixed, scroll;
     }
