--- a/css/custom.css
+++ b/css/custom.css
@@ -238,14 +238,14 @@ img.UXCaseImg {
   -webkit-transition: all 0.65s;
   -o-transition: all 0.65s;
   transition: all 0.65s;
-  filter: drop-shadow(0px 0px 4px rgba(0, 0, 0, 0.15)) drop-shadow(0px 4px 8px rgba(0, 0, 0, 0.25)); 
+  filter: drop-shadow(0px 0px 4px rgba(0, 0, 0, 0.15)) drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25)); 
 }
 
 img.UXCaseImg:hover {
   -webkit-transform: scale(1.05);
   -ms-transform: scale(1.05);
   transform: scale(1.05);
-  filter: drop-shadow(0px 0px 10px rgba(0, 0, 0, 0.25)) drop-shadow(0px 5px 10px rgba(0, 0, 0, 0.35)); 
+  filter: drop-shadow(0px 0px 10px rgba(0, 0, 0, 0.35)) drop-shadow(0px 5px 10px rgba(0, 0, 0, 0.45)); 
 }
 
 div.UXCaseLabel {
@@ -404,6 +404,7 @@ a[data-fancybox] img {
 	overflow:hidden;
 	color:#fff;
 	display:none;
+    -moz-transition: 0.5s;
     -webkit-transition: 0.5s;
     transition: 0.5s;
     z-index: 2;
@@ -623,6 +624,33 @@ iframe {
 
 .socialIcon img {
     max-height: 25px;
+}
+
+a[data-tool-tip] {
+    position: relative;
+}
+
+a[data-tool-tip]::after {
+    content: attr(data-tool-tip);
+    display: block;
+    position: absolute;
+    bottom: 0;
+    left: -50%;
+    align-self: center;
+    background-color: var(--bs-gray-100);
+    color: var(--bs-gray-700);
+    padding: 4px 10px;
+    margin: 0;
+    white-space: nowrap;
+    border-radius: 5px;
+    box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.25);
+    transform: scale(0);
+    transition: bottom ease-in 0.15s, transform ease-in 0.15s;
+}
+
+a[data-tool-tip]:hover::after {
+    transform: scale(1);
+    bottom: 150%;
 }
 
 /*  Hero section */
@@ -960,6 +988,7 @@ iframe {
         background-color: transparent;
         box-shadow: none;
         transition: background-color 0.3s ease-in-out;
+        -webkit-transition: background-color 0.3s ease-in-out;
     }
 
     #mainNav .nav-link {
