--- a/css/custom.css
+++ b/css/custom.css
@@ -438,7 +438,8 @@ a[data-fancybox] img {
 
 #illustrations img:hover {
     filter: none;
-    box-shadow: 0 0 12px rgba(255,255,255, 0.55);
+    border: none;
+    box-shadow: 0 0 12px rgba(255,255,255, 0.65);
 }
 
 .picturesMain2,
