--- a/css/custom.css
+++ b/css/custom.css
@@ -437,7 +437,7 @@ a[data-fancybox] img {
 
 #illustrations img:hover {
     filter: none;
-    border: none;
+    border: 1px solid var(--bs-gray-400);
     box-shadow: 0 0 12px rgba(255,255,255, 0.65);
 }
 
