Worked on TreasuryDirect page

--- a/css/custom.css
+++ b/css/custom.css
@@ -467,7 +467,7 @@ a[data-fancybox] img {
 
 /* Individual case study */
 #VTP_Research,
-#TD_Overview,
+#TD_Research,
 #AFA_Overview {
     margin-bottom: 9.375rem;
     padding-top: 3rem;
