--- a/css/custom.css
+++ b/css/custom.css
@@ -289,9 +289,9 @@ div.UXCaseLabel {
 
 .UXCaseTeam {
     justify-content: center;
-    border: 1.5px solid var(--bs-gray-700);
+    border: 1px solid var(--bs-gray-300);
     border-radius: 0.5rem;
-    padding: 1.5rem 0 1.5rem 0;
+    padding: 2.5rem 0;
     margin: 0 5rem;
 }
 
@@ -491,7 +491,7 @@ a[data-fancybox] img {
     padding: 1rem 2rem 0 2rem;
 }
 
-#TD_Ideation,
+#TD_Analysis,
 #TD_Prototyping {
     padding: 9.375rem 0;
     background: #A7B7AC;
