--- a/css/custom.css
+++ b/css/custom.css
@@ -64,6 +64,12 @@
     color: #7EA19F;
 }
 
+.caseStudyCW #mainNav.navbar-shrink .navbar-brand:focus,
+.caseStudyCW #mainNav.navbar-shrink .navbar-brand:active,
+.caseStudyCW #mainNav.navbar-shrink .navbar-brand:hover {
+    color: #807566;
+}
+
 .caseStudyVTP #mainNav.navbar-shrink .navbar-brand:focus,
 .caseStudyVTP #mainNav.navbar-shrink .navbar-brand:active,
 .caseStudyVTP #mainNav.navbar-shrink .navbar-brand:hover {
@@ -466,11 +472,20 @@ a[data-fancybox] img {
 }
 
 /* Individual case study */
+#CW_Research,
 #VTP_Research,
 #TD_Research,
 #AFA_Overview {
     margin-bottom: 9.375rem;
     padding-top: 3rem;
+}
+
+#CW_Definition,
+#CW_Prototyping,
+#CW_Conclusion {
+    padding: 9.375rem 0;
+    background: #B2AA9D;
+    box-shadow: inset 0px -8px 8px rgba(0, 0, 0, 0.25), inset 0px 8px 8px rgba(0, 0, 0, 0.25);
 }
 
 #VTP_Definition,
@@ -693,6 +708,10 @@ a[data-tool-tip]:hover::after {
     background-image: url("../assets/img/bg_main.png");
 }
   
+.caseStudyCW .hero-section {
+    background-image: url("../assets/img/UX_CW/UX_CW_main.png");
+}
+
 .caseStudyVTP .hero-section {
     background-image: url("../assets/img/UX_VTP/UX_VTP_main.png");
 }
@@ -892,6 +911,7 @@ a[data-tool-tip]:hover::after {
     }
 
     #projects p,
+    .caseStudyCW p,
     .caseStudyAFA p,
     .caseStudyTD p,
     .caseStudyVTP p {
@@ -960,26 +980,22 @@ a[data-tool-tip]:hover::after {
         background-image: url('../assets/img/bg_main.png'), -webkit-gradient(linear, left top, left bottom, from(#e8cf7d), to(#e8cf7d));
         background-image: url('../assets/img/bg_main.png'), linear-gradient(180deg, #e8cf7d, #e8cf7d);
         background-position: 69% 50%;
-        background-repeat: no-repeat, repeat;
+        background-repeat: no-repeat;
         background-attachment: fixed, scroll;
     }
 }
 
 /* Screen size MIN-WIDTH 992 */
 @media (min-width: 992px) {
-    .masthead {
-        height: 88vh;
+    .masthead,
+    .masthead-sub {
+        height: 95vh;
         padding: 0;
     }
         
     .masthead h2 {
         max-width: 30rem;
         font-size: 1.25rem;
-    }
-
-    .masthead-sub {
-        height: 88vh;
-        padding: 0;
     }
 
     #mainNav {
@@ -1059,6 +1075,20 @@ a[data-tool-tip]:hover::after {
         color: #4D8C61 !important;
         border-bottom: 0.5rem solid #4D8C61 !important;
     }
+
+    .caseStudyCW .navbar-shrink .nav-link:hover {
+        color: #807566 !important;
+    }
+
+    .caseStudyCW .navbar-shrink .nav-link:active {
+        color: #807566 !important;
+    }
+
+    .caseStudyCW .navbar-shrink .nav-link.active {
+        color: #807566 !important;
+        border-bottom: 0.5rem solid #807566 !important;
+    }
+
 }
 
 /* Screen size MIN-WIDTH 768 */
