--- a/css/custom.css
+++ b/css/custom.css
@@ -186,11 +186,11 @@
 }
 
 .projects-section .featured-text-right {
-    padding: 0 0 0 6rem;
+    padding: 0 0 0 3rem;
 }
 
 .projects-section .featured-text-left {
-    padding: 0 6rem 0 0;
+    padding: 0 3rem 0 0;
 }
 
 /* leading line following line */
@@ -224,53 +224,60 @@
 
 /* UX Case thumbnails */
 .UXCase {
-  margin: 0 0 12.5rem 0;
+    margin: 0 0 6rem 0;
+    flex: 0 0 auto;
+    width: 83.33333333%;
+    margin-right: auto !important;
+    margin-left: auto !important;
 }
 
 .UXCaseTitle {
-  margin: 2rem 0 1.5rem 0;
-  font-family: "Poppins", sans-serif;
-  font-weight: 600;
-  letter-spacing: 0.25px;
-  font-size: 1.55rem;
+    margin: 2rem 0 1.5rem 0;
+    font-family: "Poppins", sans-serif;
+    font-weight: 600;
+    letter-spacing: 0.25px;
+    font-size: 1.55rem;
 }
 
-img.UXCaseImg {
-  cursor: pointer;
-  width: 100%;
-  height: auto;
-  -webkit-animation-delay: 0.25s !important;
-  animation-delay: 0.25s !important;
-  -webkit-transition: all 0.35s;
-  -o-transition: all 0.35s;
-  transition: all 0.35s;
-  filter: drop-shadow(0px 0px 4px rgba(0, 0, 0, 0.15)) drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25)); 
+.UXCaseImg {
+    overflow: hidden;
+    filter: drop-shadow(0px 0px 4px rgba(0, 0, 0, 0.15)) drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25)); 
 }
 
-img.UXCaseImg:hover {
-  -webkit-transform: scale(1.05);
-  -ms-transform: scale(1.05);
-  transform: scale(1.05);
-  filter: drop-shadow(0px 0px 10px rgba(0, 0, 0, 0.35)) drop-shadow(0px 5px 10px rgba(0, 0, 0, 0.45)); 
+.UXCaseImg img {
+    cursor: pointer;
+    width: 100%;
+    height: auto;
+    -webkit-animation-delay: 0.25s !important;
+    animation-delay: 0.25s !important;
+    -webkit-transition: all 0.35s;
+    -o-transition: all 0.35s;
+    transition: all 0.35s;
+}
+
+.UXCaseImg:hover img {
+    -webkit-transform: scale(1.1);
+    -ms-transform: scale(1.1);
+    transform: scale(1.1);
 }
 
 div.UXCaseLabel {
-  flex-direction: row;
-  align-items: center;
-  display: flex;
+    flex-direction: row;
+    align-items: center;
+    display: flex;
 }
 
 .UXCaseLabel p {
-  color: #9D9D9D;
-  border: 1px solid #9D9D9D;
-  font-family: 'Lato', sans-serif;
-  font-weight: 600;
-  font-size: 15px;
-  line-height: 18px;
-  letter-spacing: 0.25px;
-  border-radius: 5px;
-  padding: 4px 10px;
-  margin: 0 8px 0 0;
+    color: #9D9D9D;
+    border: 1px solid #9D9D9D;
+    font-family: 'Lato', sans-serif;
+    font-weight: 600;
+    font-size: 15px;
+    line-height: 18px;
+    letter-spacing: 0.25px;
+    border-radius: 5px;
+    padding: 4px 10px;
+    margin: 0 8px 0 0;
 }
 
 .UXCaseNav {
@@ -594,6 +601,14 @@ a[data-fancybox] img {
     right: 0;
     top: 50%;
     transform: translate(-5% , -50%);
+    visibility: hidden;
+    opacity: 0;
+    transition: 0.5s;
+}
+
+.scrollerContainer.active {
+    visibility: visible;
+    opacity: 1;
 }
 
 .scrollerContainer p {
@@ -622,10 +637,10 @@ a[data-fancybox] img {
 .scrollerContainer span {
     content: " ";
     background-color: transparent;
-    border: 2px solid rgb(94, 94, 94);
+    border: 1px solid rgb(94, 94, 94);
     width: 1rem;
     height: 1rem;
-    border-radius: 50%;
+    border-radius: 2px;
     display: inline-block;
     position: relative;
 }
@@ -638,10 +653,10 @@ a[data-fancybox] img {
     right: 0;
     left: 0;
     margin: 2px;
-    border-radius: 50%;
+    border-radius: 2px;
     transition-duration: 0.55s;
     opacity: 0;
-    background-color: black;
+    background-color: var(--bs-gray-700);
 }
 
 .scrollerContainer a:hover span::after,
@@ -652,7 +667,8 @@ a[data-fancybox] img {
 .scrollerContainer .scrollerActive p {
     opacity: 1;
     font-weight: bold;
-    background-color: rgb(185, 185, 185);
+    color: var(--bs-gray-700);
+    background-color: var(--bs-gray-200);
 }
 
 .scrollerContainer .scrollerActive span::after {
