--- a/css/custom.css
+++ b/css/custom.css
@@ -516,13 +516,15 @@ a[data-fancybox] img {
     font-size: 0.8rem;
     box-shadow: 4px 4px 6px rgba(0, 0, 0, 0.25);
     transform: translate(0, 0);
+    transition: 0s 0.35s;
 }
 
 #CW_Ideation .btn:active {
     background-color: #3b2f24;
-    color: var(--bs-gray-400);
+    color: var(--bs-gray-200);
     box-shadow: none;
     transform: translate(2px, 2px);
+    transition: 0s;
 }
 
 #VTP_Definition,
@@ -605,6 +607,11 @@ a[data-fancybox] img {
     color: white;
     font-weight: 400;
     padding-bottom: 1rem;
+}
+
+#AFA_Prototyping .iteration {
+    padding: 0;
+    max-width: fit-content;
 }
 
 /* Page Scroller */
