--- a/css/custom.css
+++ b/css/custom.css
@@ -527,6 +527,27 @@ a[data-fancybox] img {
 
 }
 
+.iconFA::after{
+    content: "\2b";
+    display: inline-block;
+    font-family: "Font Awesome 5 Free";
+    text-rendering: auto;
+    -webkit-font-smoothing: antialiased;
+    font-weight: 900;
+    font-size: 1rem;
+    padding: 0;
+}
+
+.iconFAminus::after{
+    content: "\f068";
+    display: inline-block;
+    font-family: "Font Awesome 5 Free";
+    text-rendering: auto;
+    -webkit-font-smoothing: antialiased;
+    font-weight: 900;
+    padding: 0;
+}
+
 /* Individual case study */
 #CW_Research,
 #VTP_Research,
