--- a/css/styles.css
+++ b/css/styles.css
@@ -3117,6 +3117,7 @@ progress {
   width: 100%;
   padding: 0.25rem 1rem;
   clear: both;
+  font-size: 1rem;
   font-weight: 400;
   color: #212529;
   text-align: inherit;
