--- a/css/custom.css
+++ b/css/custom.css
@@ -2,7 +2,7 @@
     letter-spacing: 0.25px;
     font-weight: 700;
     font-family: 'Playfair Display', serif !important;
-    font-size: calc(1.375rem + 1vw);
+    font-size: calc(1.1rem + 1vw);
     line-height: calc(1.5rem + 1vw);
 }
 
@@ -1116,6 +1116,10 @@ a[data-tool-tip]:hover::after {
     .caseStudyTD p,
     .caseStudyVTP p {
         font-size: 14px;
+    }
+
+    .navbar-nav li {
+        font-size: 16px;
     }
 
     li {
