broke the about page bg

--- a/css/custom.css
+++ b/css/custom.css
@@ -920,7 +920,7 @@ a[data-tool-tip]:hover::after {
 }
 
 .aboutMe .hero-section {
-    background-image: url("../assets/img/Illustrations/Others/201802_MBTA.png");
+    background-image: url("../assets/img/Illustrations/Others/201802_MBTA.jpg");
 }
 
 /* Accordions */
