--- a/css/custom.css
+++ b/css/custom.css
@@ -1153,8 +1153,9 @@ a[data-tool-tip]:hover::after {
         filter: none;
         margin-bottom: 5px;
     }
-
-    .pictures3Da {
+	
+    .pictures3Da,
+    .picturesTrad {
         -webkit-column-count:1;
         -moz-column-count:1;
         column-count:1;
@@ -1163,7 +1164,6 @@ a[data-tool-tip]:hover::after {
         column-gap:0;
     }
 
-    .picturesTrad,
     .pictures3Db {
         -webkit-column-count:2;
         -moz-column-count:2;
